.deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  namespace: 11lxf-uat
  labels:
    app: test
spec:
  type: ClusterIP
  selector:
    app: test-service
  ports:
    - name: test-http
      port: 8080
      targetPort: 8080
